fix image overflow issue

--- a/assets/css/ghost/content.css
+++ b/assets/css/ghost/content.css
@@ -165,6 +165,7 @@
 
 .kg-image-card img {
     margin: auto;
+    height: auto;
 }
 
 
